# Scaffolding

./: README.md  items_views.py  main.py  pyproject.toml  requirements.txt
Users/: crud.py  views.py
api_v1/products/: crud.py  schemas.py
core/: config.py
core/models/: db_helper.py
